ngrok/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yumzibah-ingress
  namespace: default
spec:
  ingressClassName: ngrok
  rules:
  - host: yumzibah.local
    http:
      paths:
      - backend:
          service:
            name: yumzibah
            port:
              number: 81
        path: /
        pathType: Prefix
  - host: carefully-loving-teal.ngrok-free.app
    http:
      paths:
      - backend:
          service:
            name: yumzibah
            port:
              number: 81
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: carefully-loving-teal.ngrok-free.app
